Contact Page fixed, menu icons fixed,all logos alignment fixed

--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -42,7 +42,7 @@
 .email-icon {
     cursor: pointer;
     position: absolute;
-    width: 1.5vw;
+    width: 2vw;
     height: auto;
     left: 4vw;
     top: 20vh;
@@ -114,13 +114,15 @@
 }
 
 /* inside form container */
+
 .form-container {
     position: fixed;
     height: 92vh;
     width: 70vw;
     top: 4vh;
     left: 28vw;
-    background-color: #1a91f1c1;
+    /* background-color: #1a91f1c1; */
+    background-color: #2d93e7;
     border-radius: 30px;
     box-shadow: -5vw, 10vh, 10px, 10px (1a, 91, f1, 0.2);
 
@@ -151,37 +153,43 @@
 }
 
 .name-textarea {
+    border: 0;
+    border-bottom: 2px solid black;
     position: absolute;
     top: 30%;
     left: 10%;
     height: 7%;
     width: 80%;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 
 }
 
 .email-textarea {
+    border: 0;
+    border-bottom: 2px solid black;
     position: absolute;
     top: 42%;
     left: 10%;
     height: 7%;
     width: 80%;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 }
 
 .message-textarea {
+    border: 0;
+    border-bottom: 2px solid black;
     position: absolute;
     top: 54%;
     left: 10%;
     height: 25%;
     width: 80%;
-    border-radius: 10px;
+    /* border-radius: 10px; */
 }
 
 .name-textarea,
 .email-textarea,
 .message-textarea {
-    border-radius: 10px;
+    /* border-radius: 10px; */
     background-color: #1a90f100;
     font-family: 'Urbanist';
     font-size: 1.2em;
@@ -189,7 +197,7 @@
 
 }
 
-.name-textarea:hover,
+/* .name-textarea:hover,
 .email-textarea:hover,
 .message-textarea:hover {
     border-radius: 10px;
@@ -198,7 +206,7 @@
     font-size: 1.2em;
     border-color: rgb(255, 255, 255);
 
-}
+} */
 
 .email-textarea::placeholder,
 .message-textarea::placeholder,
